<resources>
    <string name="app_name">AndroidYggMail</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Yggmail Android</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="restart">Restart</string>
    <string name="logs">Logs</string>
    <string name="share">Share Logs</string>

    <string name="hello_first_fragment">Account name will be copied to clipboard if you press \'start\' \n Password: delta \n IMAP server: localhost \n IMAP port: 1143 \n IMAP Security: OFF \n SMTP server: localhost \n SMTP port: 1025 \n SMTP security: OFF</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="state_running">Yggmail is running.</string>
    <string name="state_error">An error occurred. Please check the logs.</string>
    <string name="state_off">Yggmail is not running.</string>
    <string name="state_initial">Press start to run an email server on your phone and create a new yggmail account.</string>
    <string name="notification_channel_name">Yggmail status</string>
    <string name="notification_channel_description">Informs about Yggmail status and allows to stop and restart the Yggmail background service.</string>
    <string name="current_session">Current session</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="choose_app_to_share">Choose an app to share the logs</string>
    <string name="find_peers_local_network">Find peers in local network</string>
    <string name="find_public_peers">Connect to public peers</string>
    <string name="local_peers">Local peers</string>
    <string name="public_peers">Public peers</string>
    <string name="description_local_network">Enable this option to communicate with other users within the same wifi or local network.</string>
    <string name="description_public_peers">Enable this option if you want to communicate with users outside of your local network</string>
    <string name="add_public_peer">Add public peer</string>
    <string name="add">add</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="select_n_peers">Select peers (%d)</string>
    <string name="select_peers">Select peers</string>
    <string name="show_timestamps">Show timestamps</string>
    <string name="hide_timestamps">Hide timestamps</string>
    <string name="show_log_tags">Show tags</string>
    <string name="hide_log_tags">Hide tags</string>
    <string name="clear_log">Clear logs</string>
    <string name="loading_peers">Loading peers …</string>
    <string name="loading_failed">Loading peer list failed.</string>
    <string name="install_deltachat">Install Delta Chat</string>
    <string name="cancel">Cancel</string>
    <string name="install_title">Install request</string>
    <string name="install_message">To read and send messages with AndroidYggmail you need to install an e-mail client. We recommend Delta Chat, but you can use any email client supporting @yggmail addresses. \nDo you want to install Delta Chat?</string>
    <string name="no">No, thanks</string>
    <string name="custom_client">Manually setup E-mail client</string>
    <string name="description_custom_client">Enable this option if you don\'t want to use AndroidYggmail in conjunction with Delta Chat.</string>
    <string name="imap_server">IMAP server:</string>
    <string name="imap_port">IMAP port:</string>
    <string name="user_name">User name:</string>
    <string name="imap_security">IMAP security:</string>
    <string name="smtp_server">SMTP server:</string>
    <string name="smtp_port">SMTP port:</string>
    <string name="smtp_security">SMTP security:</string>
    <string name="password">Password:</string>
    <string name="start_to_create_user">Tap the start button on the main page to create an account.</string>
    <string name="loading_finished">Peer list successfully loaded.</string>
    <string name="connected_peers">Connections</string>
    <string name="invalid" translatable="false">---</string>
    <string name="off">Off</string>
    <string name="no_internet">No internet</string>
</resources>
