<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="chat.delta.androidyggmail.chat.delta.AndroidYggmail.MainActivity">
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/logs"
        android:icon="@drawable/ic_content_copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/logs"
        android:icon="@drawable/ic_share_variant"
        app:showAsAction="always" />
    <item android:id="@+id/action_show_timestamps"
        android:orderInCategory="99"
        android:title="@string/show_timestamps"
        app:showAsAction="never" />
    <item android:id="@+id/action_show_log_tags"
        android:orderInCategory="98"
        android:title="@string/show_log_tags"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_log"
        android:orderInCategory="97"
        android:title="@string/clear_log"
        app:showAsAction="never" />
</menu>
